@@ -16,6 +16,7 @@ Test::ReportPrereqs.include[5] = CPAN::Meta::Validator
 
 [Prereqs]
 Dist::Zilla::Plugin::MetaResources = 4.300039 ; strict validation of license arrayref
+Dist::Zilla::Plugin::DynamicPrereqs = 0.007
 
 [Test::CleanNamespaces]
 
